--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 .logo {
   height: 32px;
   margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
+  /*background: rgba(255, 255, 255, 0.3);*/
 }
 
 .site-layout .site-layout-background {
